# tree-sitter-opendylan

./: CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package.json  pyproject.toml  setup.py  tree-sitter.json
bindings/c/: tree-sitter-opendylan.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_opendylan/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterOpendylan/: opendylan.h
bindings/swift/TreeSitterOpendylanTests/: TreeSitterOpendylanTests.swift
test/: hello.dylan  library.dylan
test/corpus/: macros.txt
