[package]
name = "tree-sitter-opendylan"
description = "A tree-sitter parser for OpenDylan"
version = "0.1.0"
authors = ["Stefan Maaßen"]
license = "GPLv3"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "opendylan"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/indika-dev/tree-sitter-opendylan"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.1.22"

[dev-dependencies]
tree-sitter = "0.24.3"
