[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tree-sitter-opendylan"
description = "A tree-sitter parser for OpenDylan"
version = "0.1.0"
keywords = ["incremental", "parsing", "tree-sitter", "opendylan"]
classifiers = [
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Topic :: Software Development :: Compilers",
  "Topic :: Text Processing :: Linguistic",
  "Typing :: Typed",
]
authors = [{ name = "Stefan Maaßen" }]
requires-python = ">=3.9"
license.text = "GPLv3"
readme = "README.md"

[project.urls]
Homepage = "https://github.com/indika-dev/tree-sitter-opendylan"

[project.optional-dependencies]
core = ["tree-sitter~=0.22"]

[tool.cibuildwheel]
build = "cp39-*"
build-frontend = "build"
